# atlasbr

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  pyproject.toml
atlasbr/: __init__.py  settings.py
atlasbr/app/: __init__.py  census.py  cnes.py  inep.py  rais.py
atlasbr/core/: __init__.py
atlasbr/core/catalog/: census.py  inep.py
atlasbr/core/geo/: h3.py  ops.py
atlasbr/core/logic/: geocoding.py  integration.py  rais.py
atlasbr/geo/: place_resolver.py  tracts.py  urban.py  utils.py
atlasbr/infra/adapters/: __init__.py  census_bd.py  census_ftp.py  ceps_bd.py  cnes_bd.py  inep_bd.py
atlasbr/infra/geo/: __init__.py  resolver.py  tracts.py
atlasbr/viz/: __init__.py  maps.py
data/: ZONAS_RODRIGO_Versão03.xlsx  main.h3.rmrj.xls
notebooks/: rais.ipynb  sdg.ipynb
src/: __init__.py  clean.py  cli.py  spatial.py  transform.py  utils.py  viz.py
src/adapters/: __init__.py  ibge_censo.py  inep_censo_escolar.py
src/atlasbr/: __init__.py  settings.py
src/atlasbr/app/: __init__.py  census.py  cnes.py  inep.py  rais.py
src/atlasbr/core/: types.py
src/atlasbr/core/catalog/: __init__.py  census.py  cnes.py  inep.py  rais.py
src/atlasbr/core/geo/: __init__.py  h3.py  masks.py  ops.py  utils.py
src/atlasbr/core/logic/: census.py  geocoding.py  rais.py
src/atlasbr/infra/adapters/: __init__.py  census_bd.py  census_ftp.py  ceps_bd.py  cnes_bd.py  inep_bd.py  rais_bd.py
src/atlasbr/infra/geo/: __init__.py  footprint.py  resolver.py  tracts.py
src/atlasbr/infra/storage/: __init__.py  cache.py
src/atlasbr/viz/: population.py  styles.py  utils.py
src/io/: __init__.py  bd_sql.py  bdd_table.py  files.py  ftp.py  http.py
src/io/queries/: __init__.py  base.py  censo.py  cnes.py  common.py  inep.py  rais.py
src/roda/: __init__.py  config.py
src/roda/assets/: municipalities.json
src/roda/defaults/: base.py  cnes.py  ibge.py  maps.py
src/roda/defaults/queries/: fetch_healthcare.sql  fetch_rais.sql  fetch_schools.sql
src/roda/fetch_data/: census.py  census_mapping.py  ceps.py  cnes.py  geo_layer.py  ibge.py  inep.py  rais.py  urban_area.py
src/roda/pipelines/: data_loading.py
src/roda/processing/: demographics.py  geocoding.py  harmonization.py
src/roda/utils/: cnae.py  geo.py  helpers.py  spatial.py  sql.py
src/roda/visualizations/: styles.py  utils.py  viz.py
tests/: conftest.py  test_census_contracts.py  test_core_logic_census.py  test_imports.py  test_rais_pipeline.py
tests/integration/infra/adapters/: test_census_ftp.py
tutorials/: 01_census_demographics.ipynb  01_introduction_to_data_loaders.ipynb  02_inep_schools.ipynb  03_cnes_health.ipynb  04_rais_jobs.ipynb  README.md  fun.html  fun.ipynb  rais.ipynb  sociodemografia.ipynb
