[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "roda"
version = "0.1.0"
authors = [
  { name="Nome", email="email@exemplo.com" },
]
description = "Uma biblioteca Python para análises de mobilidade urbana."
readme = "README.md"
requires-python = ">=3.11"  
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

# --- Dependências Principais ---
dependencies = [
    # Core de Análise de Dados
    "pandas",
    "geopandas",
    "numpy",
    "scikit-learn",
    "scipy",
    
    # Visualização
    "matplotlib",
    "seaborn",
    "folium",
    "contextily",
    "plotly",
    "bokeh",
    
    # Ecossistema Geoespacial e de Mobilidade
    "geobr",
    "h3",
    "osmnx",
    "gtfs-kit",
    "pandana",
    "tobler",
    "libpysal",
    "rtree",
    "urbanaccess",
    "peartree",
    "mapclassify",
    
    # Coleta de Dados
    "basedosdados",
    "ipeadatapy",
    "requests",
    
    # Utilitários e Ambiente de Notebook
    "jupyterlab",
    "notebook",
    "ipykernel",
    "python-dotenv",
    "tqdm",
]

# --- Dependências Opcionais ---
# Ferramentas para desenvolvimento, testes e documentação
[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
    "mypy",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/redemobGIT/atlasbr"
Issues = "https://github.com/redemobGIT/atlasbr/issues"

[tool.setuptools]
packages = ["roda"]
package-dir = {"" = "src"}