[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlasbr"
version = "0.1.0"
description = "Brazilian socio-economic data pipelines and analysis tools"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "pandas>=1.5.0",
    "geopandas>=0.12.0",
    "basedosdados>=1.6.0",
    "geobr>=0.2.0",
    "shapely>=2.0.0",
    "h3>=3.7.0",
    "tobler>=0.9.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "unidecode>=1.3.0",
    "polars>=0.18.0",
    "plotly>=5.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.0.260",
    "mypy>=1.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]  # Look in the root directory
include = ["atlasbr*"]  # Include the atlasbr folder
namespaces = false      # Usually false for flat layouts unless using implicit namespaces

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true