[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlasbr"
version = "0.1.0"
description = "Brazilian socio-economic data pipelines and analysis tools"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Your Name", email = "your.email@example.com"}
]

# CORE DEPENDENCIES
# Minimal set required for logic, I/O, and basic geometry
dependencies = [
    "pandas>=1.5.0",
    "geopandas>=0.12.0",
    "shapely>=2.0.0",
    "requests",           # Required for FTP/HTTP adapters
    "pyarrow",            # Performance for Pandas/Parquet operations
    "python-dotenv>=1.0.0",
    "unidecode>=1.3.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
# Backend: Base dos Dados (BigQuery)
bd = [
    "basedosdados>=1.6.0",
    "db-dtypes"
]

# Visualization: Interactive Charts & Maps
viz = [
    "plotly>=5.0.0",
    "mapclassify>=2.4.0",
    "matplotlib>=3.5.0"
]

# Advanced Spatial: H3 Grid, Areal Interpolation, Shapefile Fetching
geo = [
    "h3>=3.7.0",
    "tobler>=0.9.0",
    "geobr>=0.2.0"
]

# Development Tools
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.0.260",
    "mypy>=1.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["atlasbr*"]
namespaces = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]  # Essential for finding atlasbr without installation